[package]
name = "discretus"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2.84"
svg = "0.13.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.web-sys]
version = "0.3.61"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]

[lib]
crate-type = ["cdylib"]
